[package]
name = "turbolift_example"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"distributed" = ["turbolift/distributed"]

[dependencies]
turbolift = "0.1.7"
tokio = "1"
anyhow = "1"
lazy_static = "1.4.0"